[package]
name = "sequence"
version = "0.1.0"
authors = ["Craig Macomber <Craig.Macomber@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = [ "console_error_panic_hook", "wee_alloc"] #"console_error_panic_hook"

[dependencies]
im-rc = "15.0.0"
num-integer = "0.1.44"
rand = "0.8.4"
ahash = "0.7.4"
enum_dispatch = "0.3.7"
derive_more = "0.99.16"
wasm-bindgen = "0.2.74"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is ~1K in code size compared to the default allocator's ~10K.
# It is slower than the default allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

getrandom = { version = "0.2.3", features = ["js"] }

[dev-dependencies]
criterion = "0.3.4"
wasm-bindgen-test = "0.3.24"

[[bench]]
name = "benchmarks"
harness = false

[profile.bench]
opt-level = 3
# lto = true
# panic = "abort"
# debug = true

[profile.release]
# Optimize for small code size.
opt-level = "s"
panic = "abort"
