[package]
name = "forest"
version = "0.1.0"
authors = ["Craig Macomber <Craig.Macomber@microsoft.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
im-rc = "15.0.0"
num-integer = "0.1.44"
rand = "0.8.5"
ahash = "0.7.6"
derive_more = "0.99.17"
macro_rules_attribute = "0.0.2"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmarks"
harness = false
